--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row content-summary">
           {{ .Summary }}
-          <a class="more-link" href="{{ .Permalink }} ">Read the post</a>
+          <a class="more-link" href="{{ .Permalink }} ">Más Info</a>
         </div>
       </div>
     </div>
