--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="col-md-10 category-description">
-  
+
   </div>
 </div>
 
@@ -28,7 +28,7 @@
           </div>
           <div class="row content-summary">
             <p> {{ .Summary }} </p>
-            <a class="more-link" href="{{ .Permalink }} "> READ THE POST </a>
+            <a class="more-link" href="{{ .Permalink }} "> Más Info </a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="content-summary">
               <p> {{ .Summary }} </p>
-              <a class="more-link" href="{{ .Permalink }} "> READ THE POST </a>
+              <a class="more-link" href="{{ .Permalink }} "> Más Info </a>
             </div>
           </div>
         </div>
