--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,13 +3,6 @@
 <div class="col-md-12 entry">
   <div class="row">
     <div class="col-md-12">
-      <div class="entry-meta">
-        {{ .Date.Format "January 06" }}
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
       <div class="entry-header">
        {{ .Title }}
       </div>
@@ -18,7 +11,7 @@
   <div class="row">
     <div class="col-md-2">
       <div class="entry-sidebar">
-        <div class="entry-sidebar-title">CATEGORIES</div>
+        <div class="entry-sidebar-title">Páginas</div>
         {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
         <div class="entry-categories">
           <a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}">{{ $name }}</a>
